<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.luschmar</groupId>
	<artifactId>aoc-2024</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>aoc-2024</name>
	<description>aoc-2024</description>
	<modules>
		<module>day-01</module>
		<module>day-02</module>
		<module>day-03</module>
		<module>day-04</module>
		<module>day-05</module>
		<module>day-06</module>
		<module>day-07</module>
		<module>day-08</module>
		<module>day-09</module>
		<module>day-10</module>
		<module>day-11</module>
		<module>day-12</module>
		<module>day-13</module>
		<module>day-14</module>
		<module>day-15</module>
		<module>day-16</module>
		<module>day-17</module>
		<module>day-18</module>
		<module>day-19</module>
		<module>day-20</module>
		<module>day-21</module>
		<module>day-22</module>
		<module>day-23</module>
		<module>day-24</module>
		<module>tools</module>
	</modules>
	<properties>
		<java.version>23</java.version>
		<maven.compiler.source>23</maven.compiler.source>
		<maven.compiler.target>23</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
		<junit-jupiter.version>5.11.3</junit-jupiter.version>
		<surefire.failIfNoSpecifiedTests>false</surefire.failIfNoSpecifiedTests>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.luschmar</groupId>
				<artifactId>tools</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
